# ellipseimu_ros

./: CMakeLists.txt  package.xml
include/: build.sh
include/interfaces/: interfaceSerialUnix.c
include/misc/: sbgStreamBuffer.h
launch/: imu.launch
src/: ellipseMinimal.c  main.cpp
